# autoware_speed_planner

./: CMakeLists.txt  README.md  package.xml
include/speed_planner/: collision_checker.h  convex_speed_optimizer.h  cubic_spline.h  obstacle.h  reference_trajectory.h  speed_planner_node.h  trajectory.h  trajectory_loader.h  utils.h  vehicle_info.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/speed_planner/lib/pkgconfig/: speed_planner.pc
install/speed_planner/lib/speed_planner/: speed_planner
install/speed_planner/share/speed_planner/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/speed_planner/share/speed_planner/cmake/: speed_plannerConfig.cmake
install/speed_planner/share/speed_planner/launch/: speed_planner.launch
launch/: speed_planner.launch
log/: latest_build
src/: collision_checker.cpp  convex_speed_optimizer.cpp  obstacle.cpp  speed_planner_node.cpp  trajectory_loader.cpp  utils.cpp
